Adjust margin-left value of .three to correctly align to the right of the page

--- a/foundations/block-and-inline/01-margin-and-padding-1/style.css
+++ b/foundations/block-and-inline/01-margin-and-padding-1/style.css
@@ -24,5 +24,5 @@ body {
   width: 200px;
   /* CHANGE ME */
   padding: 32px;
-  margin-left: 40px;
+  margin-left: 320px;
 }
